# JobParser

./: .gitignore  README.md  classes.py  client_api.py  data.json  main.py  pyproject.toml  request_classes.py  utils.py  vacancy_classes.py
