[tool.poetry]
name = "jobparser"
version = "0.1.0"
description = ""
authors = ["Alexandr Cheplygin <alexorgchep@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
build = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
